# mirage-gpio

./: README.md
mirage-gpio/: dune-project  mirage-gpio.opam
mirage-gpio-solo5/: dune-project  mirage-gpio-solo5.opam
mirage-gpio-solo5/src/: .gpio.ml.swp  .gpio.mli.swp  dune  gpio.ml  gpio.mli
mirage-gpio/src/: dune  mirage_gpio.ml  mirage_gpio.mli
mirage-solo5/lib/: libmirage-solo5_bindings.clib
mirage-solo5/lib/bindings/: solo5_gpio_stubs.c
solo5/bindings/: GNUmakefile
solo5/bindings/hvt/: gpio.c
solo5/include/solo5/: hvt_abi.h  solo5.h
solo5/opam/: solo5-bindings-hvt.pc
solo5/tenders/hvt/: GNUmakefile  hvt.h  hvt_core.c  hvt_module_gpio.c  solo5-hvt-configure
solo5/tests/test_blk/: manifest.c
solo5/tests/test_exception/: manifest.c
solo5/tests/test_net/: manifest.c
solo5/tests/test_net_2if/: manifest.c
